# inthebasement

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  metadata.jsonl  mkdocs.yml  pyproject.toml  sitemap.xml  songs.csv.template  takes
.github/workflows/: deploy.yml
albums/: index.html
albums/atwr/: index.html
albums/bs11/: index.html
albums/car/: index.html
albums/cb/: index.html
albums/cbst/: index.html
albums/ditb/: index.html
albums/ftr/: index.html
albums/mutm/: index.html
albums/rsd/: index.html
albums/sbd/: index.html
albums/tgbt/: index.html
analyse_song/: __init__.py  __main__.py  analyse_song.py
analyse_song/utils/: __init__.py  audio.py  config.py  io_utils.py  models.py  pipeline.py  plotting.py  reporting.py
docs/: glossary.md  how.md  index.md  rationale.md  some_notes.md
docs/albums/: .nav.yml  atwr.md  bs11.md  car.md  cb.md  cbst.md  ditb.md  ftr.md  index.md  mutm.md  rsd.md  sbd.md  tcb.md  tgbt.md
docs/editions/: hhbst.md
docs/songs/: .nav.yml  2da9c.md  aab.md  afsai.md  anmc_t1.md  anmc_t2.md  anyt.md  (+51 more)
glossary/: index.html
how/: index.html
notes/: anmc_t3.md  ast_t2f1.md  batf.md  bcostyt.md  belsh.md  bous.md  bstd.md  cayfatl.md  clos_t2.md  conf_t1.md  dyth.md  dytmn.md  icciwabh_s2.md  inst5.md  oae_t2.md  ojb_t2.md  rubr_t1.md  rubr_t2.md  tfg_t1.md  undc.md  yhaabob_t1.md
rationale/: index.html
search/: search_index.json
some_notes/: index.html
songs/: _songs_nav.yml  index.html
utils/: analyse_cd.py  analyse_song.py  analyse_song_aio.py  audio_analysis.py  pb.py  sync_docs.py
(+431 files in other folders)
